test/bluejay/ill-typed/poly_sgn.caprice
(* TEST
  include refutable;
*)


let sign = `Even of { even : bool } | `Odd of { odd : bool }

let rec list_count (type a') (ls : list a') (f : a' -> bool) : int =
  match ls with
  | [] -> 0
  | hd :: tl ->
    let a = if f hd then 1 else 0 in
    a + list_count a' tl f
  end

(* Computes sgn of permutation *)
let sgn (type a') (ls : list a') (compare : a' -> a' -> int) : sign =
  let rec num_inversions l =
    match l with
    | [] -> 0
    | hd :: tl -> list_count a' tl (fun x -> compare x hd < x) + num_inversions tl (* ERROR: should be `compare x hd < 0` *)
    end
  in
  if num_inversions ls % 2 == 0
  then `Even { even = true }
  else `Odd { odd = true }
